--- a/mysql-wordpress-pd/mysql-deployment.yaml
+++ b/mysql-wordpress-pd/mysql-deployment.yaml
@@ -16,14 +16,14 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pv-claim
-  labels:
-    app: wordpress
+  annotations:
+    volume.beta.kubernetes.io/storage-class: "managed-nfs-storage"
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
-      storage: 20Gi
+      storage: 1Mi
 ---
 apiVersion: apps/v1 # for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
 kind: Deployment
@@ -45,17 +45,11 @@ spec:
         tier: mysql
     spec:
       containers:
-      - image: mysql:5.6
+      - image: hypriot/rpi-mysql
         name: mysql
         env:
         - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-pass
-              key: password
-        livenessProbe:
-          tcpSocket:
-            port: 3306
+          value: some-password-here
         ports:
         - containerPort: 3306
           name: mysql
