--- a/mysql-wordpress-pd/wordpress-deployment.yaml
+++ b/mysql-wordpress-pd/wordpress-deployment.yaml
@@ -10,20 +10,19 @@ spec:
   selector:
     app: wordpress
     tier: frontend
-  type: LoadBalancer
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: wp-pv-claim
-  labels:
-    app: wordpress
+  annotations:
+    volume.beta.kubernetes.io/storage-class: "managed-nfs-storage"
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
-      storage: 20Gi
+      storage: 1Mi
 ---
 apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
 kind: Deployment
@@ -36,6 +35,7 @@ spec:
     matchLabels:
       app: wordpress
       tier: frontend
+  replicas: 1
   strategy:
     type: Recreate
   template:
@@ -51,10 +51,7 @@ spec:
         - name: WORDPRESS_DB_HOST
           value: wordpress-mysql
         - name: WORDPRESS_DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-pass
-              key: password
+          value: some-password-here
         ports:
         - containerPort: 80
           name: wordpress
